fix wront update on AMBARI-255